@@ -46,6 +46,7 @@
 #define NO_STRUCT_DEFINITION 0
 
 int copy_string(char* target, char* source, int max);
+int string_length(char* a);
 int in_set(int c, char* s);
 int match(char* a, char* b);
 void require(int bool, char* error);
