@@ -27,6 +27,7 @@ enum {
 	SIZEOF_INT = sizeof(int),
 	SIZEOF_GLOBAL = sizeof(global_int),
 	TEN = SIX + 1 + 1 + 2,
+	STRING_LENGTH = sizeof("1234567"),
 };
 
 struct SizeTwelve {
@@ -66,6 +67,9 @@ int main() {
 	if(sizeof(local_pointer) != sizeof(void*)) return 13;
 
 	if(sizeof(*local_pointer) != 1) return 14;
+
+	if(STRING_LENGTH != 8) return 15;
+	if(sizeof("12345") != 6) return 16;
 }
 
 
